Use a Java 17 formatted string